# bkpsolver

./: CMakeLists.txt  FindGUROBI.cmake  README.md  instances_lit.tar.zst  run_tests.py  test.py
full_results/: all_results.json.zst  bounded_bkp.json.zst  sparse_comparison.json.zst
instances/CCLW/: CCLW_n35_m0.ki  CCLW_n35_m1.ki  CCLW_n35_m2.ki  CCLW_n35_m3.ki  CCLW_n35_m4.ki  CCLW_n35_m5.ki  CCLW_n35_m6.ki  CCLW_n35_m7.ki  CCLW_n35_m8.ki  CCLW_n35_m9.ki  CCLW_n40_m0.ki  CCLW_n40_m1.ki  CCLW_n40_m2.ki  CCLW_n40_m3.ki  CCLW_n40_m4.ki  CCLW_n40_m5.ki  CCLW_n40_m6.ki  CCLW_n40_m7.ki  CCLW_n40_m8.ki  CCLW_n40_m9.ki  CCLW_n45_m0.ki  CCLW_n45_m1.ki  CCLW_n45_m2.ki  CCLW_n45_m3.ki  CCLW_n45_m4.ki  CCLW_n45_m5.ki  CCLW_n45_m6.ki  CCLW_n45_m7.ki  CCLW_n45_m8.ki  CCLW_n45_m9.ki  CCLW_n50_m0.ki  CCLW_n50_m1.ki  CCLW_n50_m2.ki  CCLW_n50_m3.ki  CCLW_n50_m4.ki  CCLW_n50_m5.ki  CCLW_n50_m6.ki  CCLW_n50_m7.ki  CCLW_n50_m8.ki  CCLW_n50_m9.ki  (+10 more)
instances/DCS_100/: 100_wF1_p1_wL1(1).txt0.ki  100_wF1_p1_wL1(1).txt1.ki  100_wF1_p1_wL1(1).txt2.ki  100_wF1_p1_wL1(1).txt3.ki  100_wF1_p1_wL1(1).txt4.ki  100_wF1_p1_wL1(1).txt5.ki  100_wF1_p1_wL1(1).txt6.ki  100_wF1_p1_wL1(1).txt7.ki  100_wF1_p1_wL1(1).txt8.ki  100_wF1_p1_wL1(1).txt9.ki  100_wF1_p1_wL1(10).txt0.ki  100_wF1_p1_wL1(10).txt1.ki  100_wF1_p1_wL1(10).txt2.ki  100_wF1_p1_wL1(10).txt3.ki  100_wF1_p1_wL1(10).txt4.ki  100_wF1_p1_wL1(10).txt5.ki  100_wF1_p1_wL1(10).txt6.ki  100_wF1_p1_wL1(10).txt7.ki  100_wF1_p1_wL1(10).txt8.ki  100_wF1_p1_wL1(10).txt9.ki  (+80 more)
src/: assert.hpp  bkp_instance.cpp  bkp_instance.hpp  bkp_solver.hpp  comb_solver.hpp  dcs_solver.cpp  dcs_solver.hpp  main.cpp
(+3216 files in other folders)
